<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:cardCornerRadius="20dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/are_you_sure_want_to_disconnect_bluetooth"
                android:textColor="#9C1F1F"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lottie_dialog_animation"
                app:layout_constraintVertical_bias="1.0" />

<!--            <com.airbnb.lottie.LottieAnimationView-->
<!--                android:id="@+id/lottie_dialog_animation"-->
<!--                android:layout_width="270dp"-->
<!--                android:layout_height="270dp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintVertical_bias="0.155"-->
<!--                app:lottie_autoPlay="true"-->
<!--                app:lottie_loop="true"-->
<!--                app:lottie_rawRes="@raw/medical_shield" />-->

            <Button
                android:id="@+id/buttonYes"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:text="@string/yes"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.988"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.612" />

            <Button
                android:id="@+id/buttonNo"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/no"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonYes"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.612" />

            <ImageView
                android:id="@+id/lottie_dialog_animation"
                android:layout_width="260dp"
                android:layout_height="260dp"
                android:background="@drawable/thinking_cover"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.17" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="60dp"
                android:gravity="center"
                android:text="Do you really want to disconnect bluetooth device? Please, choose your option below"
                android:textColor="#705656"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                app:layout_constraintVertical_bias="0.919" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>