<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:tag="Fragment_add_sample"
    tools:context=".takesample.AddSampleFragment">

<!--    <ProgressBar-->
<!--        android:id="@+id/progressBarSavaData"-->
<!--        style="?android:attr/progressBarStyle"-->
<!--        android:layout_width="130dp"-->
<!--        android:layout_height="130dp"-->
<!--        android:visibility="gone"-->
<!--        android:background="@color/white"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/layout_label"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


    <LinearLayout
        android:id="@+id/layout_label"
        android:layout_width="match_parent"
        android:layout_height="482dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/linearInputValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textViewConnectionStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:text="Success connection: &quot;device_ble&quot;"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/editTextWavelengthValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="true"
            android:gravity="start|top"
            android:hint="Spectra wavelength values"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:textStyle="italic" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barchart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="4dp">

        </com.github.mikephil.charting.charts.BarChart>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearInputValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_label"
        app:layout_constraintBottom_toTopOf="@+id/linearInputPersonalInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_label"
        app:layout_constraintVertical_bias="0.050000012">

        <TextView
            android:id="@+id/textViewInputValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Value(*):"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextGlucoseValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:width="70dp"
            android:ems="1"
            android:gravity="center"
            android:hint="0.00"
            android:inputType="number|text"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/textViewInputValue" />

        <TextView
            android:id="@+id/textViewMgl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="mg/l"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/editTextGlucoseValue"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSex"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="Sex:"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewMgl"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerSex"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/custom_shadow_shape_listview"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewTemp"
            app:layout_constraintStart_toEndOf="@id/textViewSex"
            app:layout_constraintTop_toTopOf="parent" />

        <!--- Temperature-->
        <TextView
            android:id="@+id/textViewTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="55dp"
            android:text="Temp:"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515" />
        <EditText
            android:id="@+id/editTextTemp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="0°C"
            android:inputType="number|text"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearInputPersonalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearInputValue"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/linearEditNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearInputValue"
        app:layout_constraintVertical_bias="0.084">

        <!--        Height-->
        <TextView
            android:id="@+id/textViewHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Height:"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextHeight"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="0.00cm"
            android:inputType="number|text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewHeight"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        Weight-->
        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="Weight:"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/editTextHeight"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="0.00kg"
            android:inputType="number|text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewWeight"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        Age-->
        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="Age:"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/editTextWeight"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="0"
            android:inputType="number|text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewAge"
            app:layout_constraintTop_toTopOf="parent" />
        

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearEditNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearInputPersonalInfo"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutBottomAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearInputPersonalInfo"
        app:layout_constraintVertical_bias="0.13">

        <EditText
            android:id="@+id/editTextNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Notes:"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayoutBottomAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearEditNote"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/textViewDisconnectDevice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearEditNote">

        <Button
            android:id="@+id/btnTakeSample"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/take_sample" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnRandom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/random"
            android:textSize="16sp"
            android:visibility="visible" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/textViewDisconnectDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutBottomAction"
        >

        <TextView
            android:id="@+id/buttonDisconnectDevice"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/do_you_want_to_disconnect_this_device"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            android:background="@drawable/custom_button_categories_7"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>